<resources>
    <string name="app_name">List Musik</string>
    <string name="search_musik">Cari Musik</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="my_name">Mohamad Fajar Agung</string>
    <string name="my_email">mohamadfajaragung26@gmail.com</string>
    <string name="add_to_favorite">Tambah ke favorite</string>
    <string name="menu_favorite">Favorite</string>
    <string name="delete_favorite">Hapus dari favorite</string>
    <string name="favorite_kosong">favorite kosong!!</string>
</resources>